# adeye-core

./: .gitmodules
AD-EYE/ROS_Packages/src/AD-EYE/: CMakeLists.txt  package.xml
AD-EYE/ROS_Packages/src/AD-EYE/launch/: FOV_live_lidar.launch  FOV_replay_rosbags.launch  SSMP.launch  gnss_broadcaster.launch  manager_FOV_performance_testing.launch  manager_alignment_testing.launch  manager_bag_performance_testing.launch  manager_demo.launch  manager_localization_gps_testing.launch  manager_performance_testing.launch  manager_real_world.launch  manager_recording.launch  my_detection.launch  my_goal.launch  my_localization.launch  my_map.launch  my_mission_planning.launch  my_motion_planning.launch  my_rviz.launch  my_sensing.launch
AD-EYE/ROS_Packages/src/AD-EYE/rviz/: config.rviz
AD-EYE/ROS_Packages/src/AD-EYE/src/: FOV_shrinker.py  FOV_shrinker_old.py  error_monitor_launcher.py  flattening_node.cpp  gnss_broadcaster.py  goal_publisher.py  goal_viewer.cpp  grid_map_creator.cpp  lidar_timestamp_update.py  manager.py  ndt_pose_back_transformer.cpp  point_cloud_broadcaster.py  safety_supervisor.cpp  sensor_monitor.cpp
Helper_Scripts/: analyze_multi_ndt_log.py  analyze_ndt_logs.py  gps_trajectory.py  ros_node_killer.sh  run_test.sh  run_test_px2.sh
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
install/adeye/lib/adeye/: ExperimentC  GridMapCreator  cameraObjectListFuse  collisionDetector  controlSwitch  flattening  lidarRadarFuse  objectsFrameAdapter  radar_broadcaster  (+2 more)
log/: latest_build
(+32 files in other folders)
